--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
             </ul>
         </nav>
 
-        <h1>Encabezado de esta páginaaa</h1>
+        <h1>Encabezado de esta páginaa</h1>
         <h2>Encabezado de segundo nivel</h2>
-        <h2>Hola que hace</h2>
         
         <p>Parrafo donde pongo <br/> todo lo que yo quiera</p>
         <p>Parrafo donde pongo todo lo que yo quiera</p>
